[gd_scene load_steps=9 format=2]

[ext_resource path="res://Mundo.gd" type="Script" id=1]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprite/fondo.jpg" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sonidos/sonido muerte.wav" type="AudioStream" id=6]
[ext_resource path="res://Sonidos/sonifp fondo.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.263611, -1.35449, 0, 0, 0, 0, 388.93, 2.32872, 0, 0, 0, 0, 390.158, 517.777, 0, 0, 0, 0, 0.964142, 516.55, 0, 0, 0, 0, -0.263611, -1.35449 )
}

[node name="Mundo" type="Node"]

script = ExtResource( 1 )
Roca = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 390.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="Player" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 197.822, 345.226 )
speed = 200

[node name="Roca_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Score_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Inicio_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Posicion_inicio_player" type="Position2D" parent="." index="5"]

position = Vector2( 198.648, 344.748 )
scale = Vector2( 1.84396, 1.71883 )

[node name="Camino" type="Path2D" parent="." index="6"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="Camino" index="0"]

position = Vector2( -0.263611, -1.35449 )
rotation = 0.00946349
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Interfaz" parent="." index="7" instance=ExtResource( 5 )]

[node name="AudioMuerte" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = -19.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioFondo" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = -29.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="golpe" from="Player" to="." method="game_over"]

[connection signal="timeout" from="Roca_timer" to="." method="_on_Roca_timer_timeout"]

[connection signal="timeout" from="Score_timer" to="." method="_on_Score_timer_timeout"]

[connection signal="timeout" from="Inicio_timer" to="." method="_on_Inicio_timer_timeout"]

[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]


